# rust-catan-rl

./: .gitignore  .gitmodules  LICENSE.rust_catan  README.md  pyproject.toml
catan/: Cargo.toml
catan-player/: Cargo.toml
catan-player/src/: action_parser.rs  lib.rs  main.rs  terminal_player.rs
catan/src/: lib.rs
catan/src/board/layout/: layout.rs
catan/src/board/map/: tricell_map.rs
catan/src/board/utils/: coord.rs  topology.rs  transform.rs
catan/src/display/: drawtype.rs  mod.rs  pretty_terminal.rs  utils.rs
catan/src/game/: action.rs  apply.rs  apply_tests.rs  legal.rs  legal_tests.rs  mod.rs  notification.rs  phase.rs
catan/src/history/: detailed_id_game_history.rs  mod.rs
catan/src/player/: mod.rs  picker_player.rs  randomy.rs
catan/src/state/: mod.rs  player_hand.rs  tricell_state.rs
catan/src/test/: mod.rs
catan/src/utils/: development_card.rs  mod.rs  resource.rs
pycatan/: Cargo.toml  build.rs
pycatan/python/pycatan/: __init__.py  inference.py  main_model.onnx  terminal_play.py  trade_model.onnx  utils.py
pycatan/python/pycatan/jsettlers/: __init__.py  agents.py  jsettler_utils.py  jsettlers_bot.py  play_match.py  run_bot.py  server.py
pycatan/python/pycatan/train/: __init__.py  inference.py  model.py  utils.py
pycatan/src/: environment.rs  jsettler_state.rs  lib.rs  py_catan_observation.rs  py_observation_format.rs  python_player.rs  python_state.rs  terminal_game.rs  vec_env.rs
script/: export_onnx.py  run_experiment_1vs3.py  run_parallel_experiment.py  train.py
