[package]
name = "catan"
version = "0.1.0"
authors = ["Quentin Gendre <swynfel@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
typetag = "0.2.21"

[dependencies.once_cell]
version = "1.21"

[dependencies.rand]
version = "0.9"
features = ["small_rng"]

[dependencies.termion]
version = "4.0"
